[package]
name = "sdl2-engine-helpers"
version = "0.0.1"
authors = ["Tony Aldridge <zaragopha@hotmail.com>"]

[features]
default = []
# opengl = ["gl", "bitflags"]

[dependencies]
sdl2 = "0.31"
# gl = { version = "0.10.0", optional = true }
gl = { version = "0.10.0" }
# bitflags = { version = "1.0.1", optional = true }
bitflags = { version = "1.0.1" }
# image = { version = "0.18.0", optional = true }
image = { version = "0.18.0" }

[[example]]
name = "example"
